--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,7 @@
     "def is_better(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        return True\n",
-    "    elif restaurant['rating'] < alternative\n",
+    "    elif restaurant\n",
     "    pass"
    ]
   },
