--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,10 @@
     "def is_better(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        return True\n",
-    "    elif restaurant['rating'] == alternative['rating']\n",
+    "    elif restaurant['rating'] == alternative['rating']:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return Fa\n",
     "    pass"
    ]
   },
