--- a/index.ipynb
+++ b/index.ipynb
@@ -414,7 +414,9 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if len(restaurant['price']) < le\n",
+    "    if len(restaurant['price']) < len(alternative['price']):\n",
+    "        return True\n",
+    "    elif len()\n",
     "    pass"
    ]
   },
