--- a/index.ipynb
+++ b/index.ipynb
@@ -416,7 +416,7 @@
     "def is_cheaper(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return True\n",
-    "    elif len()\n",
+    "    elif len(restaurant['price']) > len(alternative['price'])\n",
     "    pass"
    ]
   },
