Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -416,7 +416,9 @@
     "def is_cheaper(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return True\n",
-    "    elif len(restaurant['price']) > len(alternative['price'])\n",
+    "    elif len(restaurant['price']) > len(alternative['price']):\n",
+    "        return False\n",
+    "    elif\n",
     "    pass"
    ]
   },
