--- a/index.ipynb
+++ b/index.ipynb
@@ -497,7 +497,8 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if restaurant['rating']\n",
+    "    if len(restaurant['rating']) > rating:\n",
+    "        \n",
     "    pass"
    ]
   },
