--- a/index.ipynb
+++ b/index.ipynb
@@ -498,7 +498,8 @@
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if len(restaurant['rating']) > rating:\n",
-    "        \n",
+    "        return True\n",
+    "    \n",
     "    pass"
    ]
   },
