Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -499,6 +499,8 @@
     "def high_rating(restaurant, rating):\n",
     "    if restaurant['rating'] > rating:\n",
     "        return True\n",
+    "    elif:\n",
+    "        restaurant\n",
     "    else:\n",
     "        return False\n",
     "    pass"
