--- a/index.ipynb
+++ b/index.ipynb
@@ -492,15 +492,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-26-0a40bacc4936>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-0a40bacc4936>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    elif:\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if restaurant['rating'] > rating:\n",
     "        return True\n",
     "    elif:\n",
-    "        restaurant\n",
+    "        restaurant['rating']) == rating:\n",
+    "            return False\n",
     "    else:\n",
     "        return False\n",
     "    pass"
